--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tableone-fundraise-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Invest in TableOne" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Invest in TableOne" />
+    <meta property="og:description" content="Invest in TableOne" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/index.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="Invest in TableOne" />
+    <meta name="twitter:image" content="/index.png" />
     
     <!-- Add Cern font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cern:wght@300;400;500;600;700&display=swap">
