--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tableone-fundraise-hub</title>
+    <title>Invest in TableOne</title>
     <meta name="description" content="Invest in TableOne" />
     <meta name="author" content="Lovable" />
 
