--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Add Noto Serif as fallback for Al Bayan -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;400;500;600;700&display=swap">
     <!-- Note: Al Bayan is a system font on macOS and iOS, so it doesn't have a Google Fonts URL -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap">
   </head>
 
   <body>
